--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,3 +2,9 @@
     margin:0;
     padding:0;
 }
+
+body {
+    background-color: black;
+    color: white;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
